--- a/batteryMonitor/app/src/main/res/layout/activity_main.xml
+++ b/batteryMonitor/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity" android:id="@+id/constraintLayout">
+
     <ImageView
+            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:layout_editor_absoluteX="0dp" android:id="@+id/displayContainer"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="#3F51B5"/>
+            app:srcCompat="@android:color/black" />
+
+    <ImageView
+            android:id="@+id/displayContainer"
+            android:layout_width="1000px"
+            android:layout_height="2200px"
+            android:layout_marginStart="50px"
+            android:layout_marginTop="50px"
+            android:layout_marginEnd="50px"
+            android:layout_marginBottom="50px"
+            android:background="#3F51B5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     <Button
             android:text="Start Experiment"
             android:layout_width="wrap_content"
@@ -26,16 +45,22 @@
             android:id="@+id/pclLogo"
             android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"/>
+
     <TextView
-            android:layout_width="262dp"
+            android:id="@+id/expList"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:gravity="start|top"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="24dp"
+            android:background="#80C2C2C2"
             android:ems="10"
-            android:id="@+id/expList" android:layout_marginTop="24dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="24dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
-            app:layout_constraintEnd_toStartOf="@+id/pclLogo" android:background="#80C2C2C2" android:textSize="17sp"/>
+            android:gravity="start|top"
+            android:inputType="textMultiLine"
+            android:textAlignment="textStart"
+            android:textSize="17sp"
+            app:layout_constraintEnd_toStartOf="@+id/pclLogo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     <TextView
             android:text="Waiting 30 seconds for temperature to stablise. Please put device into Thermal chamber"
             android:layout_width="329dp"
@@ -48,4 +73,5 @@
             app:layout_constraintTop_toTopOf="@+id/displayContainer" android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="@+id/displayContainer" android:textStyle="bold"
             android:textColor="#00FFFFFF" tools:visibility="visible"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
